Added Test Files and Edited Database (Moved getInstance method outside of constructor)